hphp/hack/test/typecheck/refinements/uninvalidated_fake_member2.php.exp
File "uninvalidated_fake_member2.php", line 16, characters 13-15:
You are trying to access the method `foo` but this object can be null. (Typing[4064])
File "uninvalidated_fake_member2.php", line 8, characters 10-11:
This can be null
File "uninvalidated_fake_member2.php", line 15, characters 5-13:
All the local information about `$c1->d` has been invalidated by this assignment.
This is a limitation of the type-checker; use a local if that's the problem.
